CSS fix move #body padding top to #wrap

--- a/assets/themes/WPadmin/css/stylesheet.css
+++ b/assets/themes/WPadmin/css/stylesheet.css
@@ -2,6 +2,7 @@
 	height: auto;
 	min-height: 100%;
 	width: 100%;
+	box-sizing: border-box;
 }
 
 /*ScrollToFixed bug when menu hidden*/
