--- a/assets/themes/WPadmin/css/zresponsive.css
+++ b/assets/themes/WPadmin/css/zresponsive.css
@@ -19,6 +19,7 @@
 		border: 0
 	}
 	#wrap {
+		padding-top: 39px;
 		height: 100%;
 	}
 	#footer {
@@ -74,7 +75,6 @@
 		box-sizing: border-box;
 	}
 	#menu + #body {
-		padding-top: 40px;
 		height: 100%;
 		overflow: scroll;
 	}
